force-app/main/default/objects/Opportunity_Playbook_Item__c/Opportunity_Playbook_Item__c.object-meta.xml
<CustomObject>
    <label>Opportunity Playbook Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Playbook Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>