force-app/main/default/objects/Opportunity_Playbook_Item__c/fields/Completed_c__c.field-meta.xml
<CustomField>
    <fullName>Completed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed__c</label>
    <type>Checkbox</type>
</CustomField>