force-app/main/default/objects/Opportunity_Playbook_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Playbook Items</relationshipLabel>
    <relationshipName>Opportunity_Playbook_Items</relationshipName>
    <type>Lookup</type>
</CustomField>