force-app/main/default/objects/Opportunity_Playbook_Item__c/fields/Task_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Task_Assignee__c</fullName>
    <label>Task Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>